Bug 146333 - Crash when closing table wizard, then odb file only (not whole LO).
Summary: Crash when closing table wizard, then odb file only (not whole LO).
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2021-12-20 12:13 UTC by Julien Nabet
Modified: 2021-12-22 09:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
gdb bt (gtk3 rendering) (7.77 KB, text/plain)
2021-12-20 12:16 UTC, Julien Nabet
Details
bt with gen rendering (6.99 KB, text/plain)
2021-12-20 12:16 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2021-12-20 12:13:55 UTC
Description:
On pc Debian x86-64 with master sources updated today, I got a crash when closing table wizard

Steps to Reproduce:
1. Launch Base
2. Click Next (to create HSQLDB Embedded)
3. Select "No, do not register", then click Finish
4. Choose a location + name then click Save
5. Click "Tables" at left pane
6. Click "Use Wizard to Create Table..."
7. Click "Cancel"
8. File/Close to only close odb file


Actual Results:
Crash

Expected Results:
No Crash


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 807f238f12e0774fabf507a17ca0ba9204d47833
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Julien Nabet 2021-12-20 12:16:14 UTC
Created attachment 177034 [details]
gdb bt (gtk3 rendering)

I noticed these logs on console:
warn:toolkit.helper:185884:185884:toolkit/source/helper/unowrapper.cxx:185: UnoWrapper::SetWindowInterface: there is already a WindowPeer/ComponentInterface for this VCL window
warn:dbaccess:185884:185884:dbaccess/source/core/dataaccess/ModelImpl.cxx:923:  com.sun.star.container.NoSuchElementException message: /home/julien/lo/libreoffice/package/source/xstor/xstorage.cxx:2974:  /home/julien/lo/libreoffice/package/source/xstor/xstorage.cxx:2974
warn:dbaccess:185884:185884:dbaccess/source/core/dataaccess/ModelImpl.cxx:923:  com.sun.star.container.NoSuchElementException message: /home/julien/lo/libreoffice/package/source/xstor/xstorage.cxx:2974:  /home/julien/lo/libreoffice/package/source/xstor/xstorage.cxx:2974
Comment 2 Julien Nabet 2021-12-20 12:16:33 UTC
Created attachment 177035 [details]
bt with gen rendering
Comment 3 Julien Nabet 2021-12-20 12:20:50 UTC
I don't reproduce this with LO Debian package 7.2.4.1 or with master sources updated yesterday but with enable-symbols.

So enable-dbgutil only?

Caolán: any thoughts about specific pb with framework or vcl with enable-dbgutil?
Comment 4 Caolán McNamara 2021-12-20 12:47:54 UTC
I don't get a crash, but I do get

warn:sal.osl.mutex:1758238:1758238:sal/osl/unx/mutex.cxx:103: pthread_mutex_lock failed: EINVAL
warn:sal.osl.mutex:1758238:1758238:sal/osl/unx/mutex.cxx:149: pthread_mutex_unlock failed: EINVAL
warn:sal.osl.mutex:1758238:1758238:sal/osl/unx/mutex.cxx:103: pthread_mutex_lock failed: EINVAL
warn:sal.osl.mutex:1758238:1758238:sal/osl/unx/mutex.cxx:149: pthread_mutex_unlock failed: EINVAL

which is probably a use of mutex after free
Comment 5 Caolán McNamara 2021-12-20 14:08:29 UTC
I expect https://gerrit.libreoffice.org/c/core/+/127159 to fix this.
Comment 6 Commit Notification 2021-12-20 19:37:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/001259475f82d01c59fb559f47500bc62fc7da94

tdf#146333 don't create a new XTitle just to remove a listener from it

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2021-12-20 20:58:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/c036347589da379f4256627df4fe7f62a2715a59

tdf#146333 don't create a new XTitle just to remove a listener from it

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Julien Nabet 2021-12-22 09:49:03 UTC
Thank you again, let's put this to RESOLVED/FIXED!