tdf#146333 don't create a new XTitle just to remove a listener from it

seeing as the listener obviously won't be in it

Change-Id: If9944c003fa51309288276f1327011dc7403b31b